# workout-db

./: LICENSE  README.md  container.sh  default.nix  flake.nix  lock.x86_64-linux.json  pyproject.toml  secrets.yaml
tests/: test_bot.py  test_db.py  test_utils.py
workout_db/: bot.py  db.py  main.py  utils.py
